examples/programs/invalid/stack_type_mismatch_cz.sst
.version 1
; Invalid: cz expects zone, but stack has float

const_float 1.0
cz
halt
